tests/snapshots/bundled_automations_panel__a-cursor-past-the-last-row.snap
---
source: tests/bundled_automations_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text " ● " accent bold
    text "only" accent bold ellipsize
    text " — daily 09:00 · spawn · in 2m " accent bold
