tests/snapshots/bundled_automations_panel__an-anchor-without-a-drawn-cursor.snap
---
source: tests/bundled_automations_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=5 scrollbar=false
  line
    text " ● " secondary
    text "row" secondary ellipsize
    text " — daily 09:00 · spawn · in 2m " secondary
  line
    text " ● " secondary
    text "row" secondary ellipsize
    text " — daily 09:00 · spawn · in 2m " secondary
  line
    text " ● " secondary
    text "row" secondary ellipsize
    text " — daily 09:00 · spawn · in 2m " secondary
  line
    text " ● " secondary
    text "row" secondary ellipsize
    text " — daily 09:00 · spawn · in 2m " secondary
  line
    text " ● " secondary
    text "row" secondary ellipsize
    text " — daily 09:00 · spawn · in 2m " secondary
  line
    text " ● " secondary
    text "row" secondary ellipsize
    text " — daily 09:00 · spawn · in 2m " secondary
