tests/snapshots/bundled_automations_panel__an-offset-inside-a-character.snap
---
source: tests/bundled_automations_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text " ● " secondary
    text "a" accent bold underline ellipsize
    text "bc…" secondary ellipsize
    text " " accent bold underline ellipsize
    text "def" secondary ellipsize
    text " — daily 09:00 · spawn · in 2m " secondary
