tests/snapshots/bundled_automations_panel__enabled-and-disabled-rows.snap
---
source: tests/bundled_automations_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text " ● " secondary
    text "nightly sync" secondary ellipsize
    text " — daily 09:00 · spawn · in 2m " secondary
  line
    text " ○ " muted
    text "paused one" muted ellipsize
    text " — daily 09:00 · spawn · disabled " muted
  line
    text " ○ " muted
    text "disabled but scheduled" muted ellipsize
    text " — daily 09:00 · spawn · disabled " muted
