tests/snapshots/bundled_automations_panel__none--unfocused.snap
---
source: tests/bundled_automations_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=none scrollbar=false
  text "none" muted
